force-app/main/default/objects/zisf__ZoomInfo__c/zisf__ZoomInfo__c.object-meta.xml
<CustomObject>
    <description>The ZoomInfo object stores all Person and Company data for the associated Lead, Contact, or Account.</description>
    <label>ZoomInfo</label>
    <nameField>
        <label>ZoomInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZoomInfo Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>