force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Account__c.field-meta.xml
<CustomField>
    <fullName>zisf__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated account.</description>
    <inlineHelpText>Associated account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ZoomInfo</relationshipLabel>
    <relationshipName>ZoomInfo_Records</relationshipName>
    <type>Lookup</type>
</CustomField>