force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Company_City__c.field-meta.xml
<CustomField>
    <fullName>zisf__Company_City__c</fullName>
    <description>Company HQ city address.</description>
    <inlineHelpText>Company HQ city address.</inlineHelpText>
    <label>Company City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>