force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Company_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>zisf__Company_Employee_Count__c</fullName>
    <description>Employee count for Company.</description>
    <inlineHelpText>Employee count for Company.</inlineHelpText>
    <label>Company Employee Count</label>
    <length>100</length>
    <type>Text</type>
</CustomField>