force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Company_Employee_Range__c.field-meta.xml
<CustomField>
    <fullName>zisf__Company_Employee_Range__c</fullName>
    <description>Employee Range for Company.</description>
    <inlineHelpText>Employee Range for Company.</inlineHelpText>
    <label>Company Employee Range</label>
    <length>100</length>
    <type>Text</type>
</CustomField>