force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Company_Industry__c.field-meta.xml
<CustomField>
    <fullName>zisf__Company_Industry__c</fullName>
    <description>Industry of Company.</description>
    <inlineHelpText>Industry of Company.</inlineHelpText>
    <label>Company Industry</label>
    <length>200</length>
    <type>Text</type>
</CustomField>