force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Company_Is_Defunct__c.field-meta.xml
<CustomField>
    <fullName>zisf__Company_Is_Defunct__c</fullName>
    <description>Flag to determine whether company is defunct.</description>
    <inlineHelpText>Flag to determine whether company is defunct.</inlineHelpText>
    <label>Company Is Defunct</label>
    <length>25</length>
    <type>Text</type>
</CustomField>