force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Company_NAICS_Codes__c.field-meta.xml
<CustomField>
    <fullName>zisf__Company_NAICS_Codes__c</fullName>
    <description>List of NAICS codes associated with company.</description>
    <inlineHelpText>List of NAICS codes associated with company.</inlineHelpText>
    <label>Company NAICS Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>