force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>zisf__Company_Name__c</fullName>
    <description>Name of business.</description>
    <inlineHelpText>Name of business.</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>