force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>zisf__Company_Phone__c</fullName>
    <description>Company HQ phone.</description>
    <inlineHelpText>Company HQ phone.</inlineHelpText>
    <label>Company Phone</label>
    <type>Phone</type>
</CustomField>