force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Company_Ranking__c.field-meta.xml
<CustomField>
    <fullName>zisf__Company_Ranking__c</fullName>
    <description>Reported company rankings.</description>
    <inlineHelpText>Reported company rankings.</inlineHelpText>
    <label>Company Ranking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>