force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Company_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>zisf__Company_Revenue_Range__c</fullName>
    <description>Revenue range associated with Company.</description>
    <inlineHelpText>Revenue range associated with Company.</inlineHelpText>
    <label>Company Revenue Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>