force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Company_Ticker__c.field-meta.xml
<CustomField>
    <fullName>zisf__Company_Ticker__c</fullName>
    <description>Stock Ticker for publicly traded companies.</description>
    <inlineHelpText>Stock Ticker for publicly traded companies.</inlineHelpText>
    <label>Company Ticker</label>
    <length>25</length>
    <type>Text</type>
</CustomField>