force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Company_Ultimate_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>zisf__Company_Ultimate_Parent_ID__c</fullName>
    <description>ZoomInfo ID for Ultimate Parent company.</description>
    <inlineHelpText>ZoomInfo ID for Ultimate Parent company.</inlineHelpText>
    <label>Company Ultimate Parent ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>