force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Company_Website__c.field-meta.xml
<CustomField>
    <fullName>zisf__Company_Website__c</fullName>
    <description>Corporate website associated with Company.</description>
    <inlineHelpText>Corporate website associated with Company.</inlineHelpText>
    <label>Company Website</label>
    <type>Url</type>
</CustomField>