force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Confidence_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>zisf__Confidence_Match_Score__c</fullName>
    <description>Numeric value for confidence match score.</description>
    <inlineHelpText>Numeric value for confidence match score (0-100).</inlineHelpText>
    <label>Confidence Match Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>