force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Free_Email__c.field-meta.xml
<CustomField>
    <fullName>zisf__Free_Email__c</fullName>
    <description>Indicates if ZoomInfo Recognizes an Email Address Input Value as Managed by a Free or Temporary Email Service Provider.</description>
    <inlineHelpText>Indicates if ZoomInfo Recognizes an Email Address Input Value as Managed by a Free or Temporary Email Service Provider.</inlineHelpText>
    <label>Free Email</label>
    <length>10</length>
    <type>Text</type>
</CustomField>