force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Job_Title__c.field-meta.xml
<CustomField>
    <fullName>zisf__Job_Title__c</fullName>
    <description>Person current  job title.</description>
    <inlineHelpText>Person current  job title.</inlineHelpText>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>