force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Known_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>zisf__Known_Last_Name__c</fullName>
    <description>Indicates if ZoomInfo Recognizes a First Name Input Value as a Known Last Name Using Multiple Sources Including the U.S. Census.</description>
    <inlineHelpText>Indicates if ZoomInfo Recognizes a First Name Input Value as a Known Last Name Using Multiple Sources Including the U.S. Census.</inlineHelpText>
    <label>Known Last Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>