force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Lead__c.field-meta.xml
<CustomField>
    <fullName>zisf__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated lead.</description>
    <inlineHelpText>Associated lead.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>ZoomInfo</relationshipLabel>
    <relationshipName>ZoomInfo_Records</relationshipName>
    <type>Lookup</type>
</CustomField>