force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Management_Level__c.field-meta.xml
<CustomField>
    <fullName>zisf__Management_Level__c</fullName>
    <description>Person&apos;s management level.</description>
    <inlineHelpText>Person&apos;s management level.</inlineHelpText>
    <label>Management Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>