force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Normalized_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>zisf__Normalized_Last_Name__c</fullName>
    <description>ZoomInfo Normalized Last Name Based on Input Value.</description>
    <inlineHelpText>ZoomInfo Normalized Last Name Based on Input Value.</inlineHelpText>
    <label>Normalized Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>