force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Person_City__c.field-meta.xml
<CustomField>
    <fullName>zisf__Person_City__c</fullName>
    <description>Person business city address.</description>
    <inlineHelpText>Person business city address.</inlineHelpText>
    <label>Person City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>