force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Person_Country__c.field-meta.xml
<CustomField>
    <fullName>zisf__Person_Country__c</fullName>
    <description>Person business country address.</description>
    <inlineHelpText>Person business country address.</inlineHelpText>
    <label>Person Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>