force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Person_Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>zisf__Person_Direct_Phone__c</fullName>
    <label>Person Direct Phone</label>
    <length>64</length>
    <type>Text</type>
</CustomField>