force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Person_Education__c.field-meta.xml
<CustomField>
    <fullName>zisf__Person_Education__c</fullName>
    <description>Person educational history.</description>
    <inlineHelpText>Person educational history.</inlineHelpText>
    <label>Person Education</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>