force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Person_Gender__c.field-meta.xml
<CustomField>
    <fullName>zisf__Person_Gender__c</fullName>
    <label>Person Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>