force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Person_Looks_Like_EU__c.field-meta.xml
<CustomField>
    <fullName>zisf__Person_Looks_Like_EU__c</fullName>
    <description>Inferred Person European Union Geographic Region Designation.</description>
    <inlineHelpText>Inferred Person European Union Geographic Region Designation.</inlineHelpText>
    <label>Person Looks Like EU</label>
    <length>10</length>
    <type>Text</type>
</CustomField>