force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Person_State__c.field-meta.xml
<CustomField>
    <fullName>zisf__Person_State__c</fullName>
    <description>Person business state address.</description>
    <inlineHelpText>Person business state address.</inlineHelpText>
    <label>Person State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>