force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Person_Street__c.field-meta.xml
<CustomField>
    <fullName>zisf__Person_Street__c</fullName>
    <description>Person business street address.</description>
    <inlineHelpText>Person business street address.</inlineHelpText>
    <label>Person Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>