force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__Zoominfo_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>zisf__Zoominfo_Company_ID__c</fullName>
    <description>ZoomInfo unique identified for Company.</description>
    <inlineHelpText>ZoomInfo unique identified for Company.</inlineHelpText>
    <label>Zoominfo Company ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>