force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__ZoomInfo_Last_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>zisf__ZoomInfo_Last_Verified_Date__c</fullName>
    <description>Date person record was last verified in ZoomInfo&#39;s database.</description>
    <inlineHelpText>Date person record was last verified in ZoomInfo&#39;s database.</inlineHelpText>
    <label>ZoomInfo Last Verified Date</label>
    <type>Date</type>
</CustomField>