force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__ZoomInfo_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>zisf__ZoomInfo_Person_ID__c</fullName>
    <description>ZoomInfo unique identified for Person record.</description>
    <inlineHelpText>ZoomInfo ID for person record.</inlineHelpText>
    <label>ZoomInfo Person ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>