force-app/main/default/objects/zisf__ZoomInfo__c/fields/zisf__ZoomInfo_Source2__c.field-meta.xml
<CustomField>
    <fullName>zisf__ZoomInfo_Source2__c</fullName>
    <label>ZoomInfo Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>