force-app/main/default/objects/zisf__ZoomInfo__c/recordTypes/zisf__ZoomInfo_Company.recordType-meta.xml
<RecordType>
    <fullName>zisf__ZoomInfo_Company</fullName>
    <active>true</active>
    <description>Use for ZoomInfo Company records</description>
    <label>ZoomInfo Company</label>
</RecordType>