force-app/main/default/objects/zisf__ZoomInfo__c/recordTypes/zisf__ZoomInfo_Person.recordType-meta.xml
<RecordType>
    <fullName>zisf__ZoomInfo_Person</fullName>
    <active>true</active>
    <description>Use for ZoomInfo Person records</description>
    <label>ZoomInfo Person</label>
</RecordType>